@@ -30,6 +30,7 @@ tbl_TESTS = \
   src/preproc/tbl/tests/check-vertical-line-length.sh \
   src/preproc/tbl/tests/cooperate-with-nm-request.sh \
   src/preproc/tbl/tests/count-continued-input-lines.sh \
+  src/preproc/tbl/tests/do-not-overdraw-page-top-in-nroff-mode.sh \
   src/preproc/tbl/tests/do-not-overlap-bottom-border-in-nroff.sh \
   src/preproc/tbl/tests/do-not-segv-on-invalid-vertical-span-entry.sh \
   src/preproc/tbl/tests/do-not-segv-when-backslash-R-in-text-block.sh \
